collect: fixing static analysis bugs